--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <!--
+      FontSize for Tailwind CSS. FontName = inter
+    -->
     <title>React App</title>
   </head>
   <body>
